k8s/meilisearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
spec:
  ports:
  - port: 7700
  selector:
    app: meilisearch
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meilisearch
spec:
  selector:
    matchLabels:
      app: meilisearch
  template:
    metadata:
      labels:
        app: meilisearch
    spec:
      containers:
      - name: meilisearch
        image: getmeili/meilisearch:v1.3
        ports:
        - containerPort: 7700
